--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                       <div class="card">
                         <div class="card-image">
                           <img src="images/sample-1.jpg">
-                          <span class="card-title">INICIO DE SESION UCH</span>
+                          <span class="card-title">Rappi LOGIN UCH</span>
                         </div>
                         <div class="card-content">
-                          <p>Ingresa tus datos</p>
+                          <p>Ingresa tus datos para ingresar</p>
                           <div class="row" style="margin-bottom: -20px;">
                             <div class="input-field col s12 m6">
                                 <input id="usuario" type="text">
